// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Language Tour — Type Constructors > maybe type 1`] = `
[
  {
    "codegenJS": "function main() {
  const env_cls2 = {};
  const fnref_cls2 = closure_13;
  const closure_cls2 = {
    __fn: fnref_cls2,
    __env: env_cls2
  };
  return closure_cls2;
}

function closure_13(env0, a1) {
  const v0 = "Unit";
  const v1 = {
    just: a1,
    nothing: v0
  };
  return v1;
}
return main();
",
    "elaborated": "λ(a: Type) -> Variant [ just: a, nothing: Unit ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Maybe"}
[3] lambda {"variable":"a","icit":"Explicit","level":1}
  :annotation -> [4]
  :body -> [5]
  :env -> [12]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] app {"icit":"Explicit"}
  :arg -> [7]
  :func -> [6]
[6] lit {"value":{"type":"Atom","value":"Variant"}}
[7] row:ext {"label":"just"}
  :rest -> [9]
  :value -> [8]
[8] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[9] row:ext {"label":"nothing"}
  :rest -> [11]
  :value -> [10]
[10] lit {"value":{"type":"Atom","value":"Unit"}}
[11] row:empty
[12] env
[13] closure
  :body -> [3]
  :env -> [12]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let env_cls2 = alloc {  }
      let fnref_cls2 = &closure_13
      let closure_cls2 = alloc { __fn: fnref_cls2, __env: env_cls2 }
      return closure_cls2
  fn closure_13(env0, a1) entry=entry
    entry:
      let v0 = Unit
      let v1 = alloc { just: a1, nothing: v0 }
      return v1",
    "name": "Maybe",
    "normalized": "λ(a: Type) -> (closure: Variant [ just: a, nothing: Unit ] -| Γ: a)",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(t1: Type) -> Type",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = 42;
  const v1 = {
    just: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ just: 42 ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"maybeNum"}
[3] struct
  :field -> [4] {"label":"just"}
[4] lit {"value":{"type":"Num","value":42}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 42
      let v1 = alloc { just: v0 }
      return v1",
    "name": "maybeNum",
    "normalized": "Struct [ just: 42 ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Variant [ just: Num, nothing: Unit ]",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = null;
  const v1 = {
    nothing: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ nothing: unit ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"maybeStr"}
[3] struct
  :field -> [4] {"label":"nothing"}
[4] lit {"value":{"type":"unit"}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = unit
      let v1 = alloc { nothing: v0 }
      return v1",
    "name": "maybeStr",
    "normalized": "Struct [ nothing: unit ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Variant [ just: String, nothing: Unit ]",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Type Constructors > recursive types — List 1`] = `
[
  {
    "codegenJS": "function main() {
  return v0;
}
return main();
",
    "elaborated": "List",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"List"}
[3] mu {"variable":"x","source":"List","level":1}
  :annotation -> [4]
  :body -> [7]
[4] pi {"variable":"t1","icit":"Explicit","level":1}
  :annotation -> [5]
  :body -> [6]
[5] lit {"value":{"type":"Atom","value":"Type"}}
[6] lit {"value":{"type":"Atom","value":"Type"}}
[7] lambda {"variable":"a","icit":"Explicit","level":2}
  :annotation -> [8]
  :body -> [9]
  :env -> [24]
[8] lit {"value":{"type":"Atom","value":"Type"}}
[9] app {"icit":"Explicit"}
  :arg -> [11]
  :func -> [10]
[10] lit {"value":{"type":"Atom","value":"Variant"}}
[11] row:ext {"label":"cons"}
  :rest -> [21]
  :value -> [12]
[12] app {"icit":"Explicit"}
  :arg -> [14]
  :func -> [13]
[13] lit {"value":{"type":"Atom","value":"Schema"}}
[14] row:ext {"label":"1"}
  :rest -> [18]
  :value -> [15]
[15] app {"icit":"Explicit"}
  :arg -> [17]
  :func -> [16]
[16] var:bound {"index":1}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[17] var:bound {"index":0}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[18] row:ext {"label":"0"}
  :rest -> [20]
  :value -> [19]
[19] var:bound {"index":0}
  :refers_to -> [7]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
  :scope -> [7] {"level":2}
[20] row:empty
[21] row:ext {"label":"nil"}
  :rest -> [23]
  :value -> [22]
[22] lit {"value":{"type":"Atom","value":"Unit"}}
[23] row:empty
[24] env
  :capture -> [3] {"index":0}
[25] closure
  :body -> [7]
  :env -> [24]",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      return v0",
    "name": "List",
    "normalized": "List",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Π(t1: Type) -> Type",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = null;
  const v1 = {
    nil: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ nil: unit ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"empty"}
[3] struct
  :field -> [4] {"label":"nil"}
[4] lit {"value":{"type":"unit"}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = unit
      let v1 = alloc { nil: v0 }
      return v1",
    "name": "empty",
    "normalized": "Struct [ nil: unit ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "(List) Num",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = 1;
  const v1 = null;
  const v2 = {
    nil: v1
  };
  const v3 = {
    0: v0,
    1: v2
  };
  const v4 = {
    cons: v3
  };
  return v4;
}
return main();
",
    "elaborated": "Struct [ cons: Struct [ 0: 1, 1: Struct [ nil: unit ] ] ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"listOf1"}
[3] struct
  :field -> [4] {"label":"cons"}
[4] struct
  :field -> [5] {"label":"0"}
  :field -> [6] {"label":"1"}
[5] lit {"value":{"type":"Num","value":1}}
[6] struct
  :field -> [7] {"label":"nil"}
[7] lit {"value":{"type":"unit"}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 1
      let v1 = unit
      let v2 = alloc { nil: v1 }
      let v3 = alloc { 0: v0, 1: v2 }
      let v4 = alloc { cons: v3 }
      return v4",
    "name": "listOf1",
    "normalized": "Struct [ cons: Struct [ 0: 1, 1: Struct [ nil: unit ] ] ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "(List) Num",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = 1;
  const v1 = 2;
  const v2 = 3;
  const v3 = null;
  const v4 = {
    nil: v3
  };
  const v5 = {
    0: v2,
    1: v4
  };
  const v6 = {
    cons: v5
  };
  const v7 = {
    0: v1,
    1: v6
  };
  const v8 = {
    cons: v7
  };
  const v9 = {
    0: v0,
    1: v8
  };
  const v10 = {
    cons: v9
  };
  return v10;
}
return main();
",
    "elaborated": "Struct
  [ cons: Struct
      [ 0: 1,
        1: Struct
          [ cons: Struct
              [ 0: 2,
                1: Struct
                  [ cons: Struct [ 0: 3, 1: Struct [ nil: unit ] ] ] ] ] ] ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"listOf3"}
[3] struct
  :field -> [4] {"label":"cons"}
[4] struct
  :field -> [5] {"label":"0"}
  :field -> [6] {"label":"1"}
[5] lit {"value":{"type":"Num","value":1}}
[6] struct
  :field -> [7] {"label":"cons"}
[7] struct
  :field -> [8] {"label":"0"}
  :field -> [9] {"label":"1"}
[8] lit {"value":{"type":"Num","value":2}}
[9] struct
  :field -> [10] {"label":"cons"}
[10] struct
  :field -> [11] {"label":"0"}
  :field -> [12] {"label":"1"}
[11] lit {"value":{"type":"Num","value":3}}
[12] struct
  :field -> [13] {"label":"nil"}
[13] lit {"value":{"type":"unit"}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = 1
      let v1 = 2
      let v2 = 3
      let v3 = unit
      let v4 = alloc { nil: v3 }
      let v5 = alloc { 0: v2, 1: v4 }
      let v6 = alloc { cons: v5 }
      let v7 = alloc { 0: v1, 1: v6 }
      let v8 = alloc { cons: v7 }
      let v9 = alloc { 0: v0, 1: v8 }
      let v10 = alloc { cons: v9 }
      return v10",
    "name": "listOf3",
    "normalized": "Struct
  [ cons: Struct
      [ 0: 1,
        1: Struct
          [ cons: Struct
              [ 0: 2,
                1: Struct
                  [ cons: Struct [ 0: 3, 1: Struct [ nil: unit ] ] ] ] ] ] ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "(List) Num",
    "validity": "valid",
  },
]
`;

exports[`Language Tour — Type Constructors > recursive types — Peano 1`] = `
[
  {
    "codegenJS": "function main() {
  return v0;
}
return main();
",
    "elaborated": "Peano",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"Peano"}
[3] mu {"variable":"x","source":"Peano","level":1}
  :annotation -> [4]
  :body -> [5]
[4] lit {"value":{"type":"Atom","value":"Type"}}
[5] app {"icit":"Explicit"}
  :arg -> [7]
  :func -> [6]
[6] lit {"value":{"type":"Atom","value":"Variant"}}
[7] row:ext {"label":"succ"}
  :rest -> [9]
  :value -> [8]
[8] var:bound {"index":0}
  :refers_to -> [3]
  :scope -> [2] {"level":0}
  :scope -> [3] {"level":1}
[9] row:ext {"label":"zero"}
  :rest -> [11]
  :value -> [10]
[10] lit {"value":{"type":"Atom","value":"Unit"}}
[11] row:empty",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      return v0",
    "name": "Peano",
    "normalized": "Peano",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Type",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = null;
  const v1 = {
    zero: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ zero: unit ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"zero"}
[3] struct
  :field -> [4] {"label":"zero"}
[4] lit {"value":{"type":"unit"}}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = unit
      let v1 = alloc { zero: v0 }
      return v1",
    "name": "zero",
    "normalized": "Struct [ zero: unit ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Peano",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = zero;
  const v1 = {
    succ: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ succ: zero ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"first"}
[3] struct
  :field -> [5] {"label":"succ"}
[4] var:free {"name":"zero"}
[5] var:ref {"name":"zero"}
  :refers_to -> [4]
  :scope -> [2] {"level":0}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = zero
      let v1 = alloc { succ: v0 }
      return v1",
    "name": "first",
    "normalized": "Struct [ succ: Struct [ zero: unit ] ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Peano",
    "validity": "valid",
  },
  {
    "codegenJS": "function main() {
  const v0 = first;
  const v1 = {
    succ: v0
  };
  return v1;
}
return main();
",
    "elaborated": "Struct [ succ: first ]",
    "gram": "[1] root
  :entry -> [3]
[2] stmt:let {"variable":"second"}
[3] struct
  :field -> [5] {"label":"succ"}
[4] var:free {"name":"first"}
[5] var:ref {"name":"first"}
  :refers_to -> [4]
  :scope -> [2] {"level":0}",
    "ivl": "true",
    "kind": "let",
    "mir": "module
  fn main entry=entry
    entry:
      let v0 = first
      let v1 = alloc { succ: v0 }
      return v1",
    "name": "second",
    "normalized": "Struct [ succ: Struct [ succ: Struct [ zero: unit ] ] ]",
    "solverTrace": "=== Formula ===
  true

=== Variables ===
  proxy p1: true

=== Registry ===

=== Trace ===
[clauses]
  #0: p1 -> unit: p1
  #1: p1 -> unit: p1

[propagate] p1 = true (forced by #0: p1 (true))
  trail: { p1@0 }
[clauses]
  #0: true -> satisfied
  #1: true -> satisfied

[theory] all assert p1: ok

[theory] all check: ok
  feasible

[sat]",
    "type": "Peano",
    "validity": "valid",
  },
]
`;
